Atualizei index.hmtl com uma nova linha

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 
-<h1>Hello World</h1>
-<p>This is the first file in my new Git Repo.</p>
+<h1>Olá Mundo</h1>
+<p>Este é o primeiro arquivo do meu novo reposiório do Git.</p>
+<p>Uma nova linha em nosso arquivo!</p>
 
 </body>
 </html>
