--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
-<h1>Olá Mundo</h1>
+<h1>Olá Mundo!</h1>
+<div><img src = "hello-world.png" alt="Hellor World fundo preto"
+style="width: 100%;max-width: 960px;"></div>    
 <p>Este é o primeiro arquivo do meu novo reposiório do Git.</p>
 <p>Uma nova linha em nosso arquivo!</p>
 
