Atualizei index.html com correções de emergência

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <h1>Olá Mundo</h1>
 <p>Este é o primeiro arquivo do meu novo reposiório do Git.</p>
 <p>Uma nova linha em nosso arquivo!</p>
+<p>Essa linha está aqui para mostrar como funciona a fusão</p>
 
 </body>
 </html>
