--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 style="width: 100%;max-width: 960px;"></div>    
 <p>Este é o primeiro arquivo do meu novo reposiório do Git.</p>
 <p>Uma nova linha em nosso arquivo!</p>
+<div><img src="Hello-git.png" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
 </body>
 </html>
